src/snapshots/rusted_git__rusted_git__tests__app_loading_finished.snap
---
source: src/rusted_git.rs
expression: terminal.backend()
---
"  Status [1]  |  Log [2]  |  Files [3]  |  Stashing [4]  |  Stashes [5]  |  Graph [6]  |  "
" ──────────────────────────────────────────────────────────────────────────────────────── "
"┌Unstaged Changes───────────────────────────┐┌Diff: ─────────────────────────────────────┐"
"│                                           ││                                           │"
"│                                           ││                                           │"
"│                                           ││                                           │"
"└───────────────────────────────────{master}┘│                                           │"
"┌Staged Changes─────────────────────────────┐│                                           │"
"│                                           ││                                           │"
"│                                           ││                                           │"
"└───────────────────────────────────────────┘└───────────────────────────────────────────┘"
"Branches [b] Push [p] Fetch [⇧F] Pull [f] Undo Commit [⇧U] Submodules [⇧S]        more [.]"
