src/snapshots/rusted_git__rusted_git__tests__app_log_tab_showing_one_commit.snap
---
source: src/rusted_git.rs
expression: terminal.backend()
---
"  Status [1]  |  Log [2]  |  Files [3]  |  Stashing [4]  |  Stashes [5]  |  Graph [6]  |  "
" ──────────────────────────────────────────────────────────────────────────────────────── "
"┌Commit 1/1──────────────────────────────────────────────────────────────────────────────┐"
"│[AAAAA] <1m ago    name                  initial                                        █"
"│                                                                                        ║"
"│                                                                                        ║"
"│                                                                                        ║"
"│                                                                                        ║"
"│                                                                                        ║"
"│                                                                                        ║"
"└────────────────────────────────────────────────────────────────────────────────────────┘"
"Scroll [↑↓] Mark [˽] Details [⏎] Branches [b] Compare [⇧C] Copy Hash [y] Tag [t]  more [.]"
